2002-03-11  Damon J. Courtney <damon@unreality.com>

	* src/TclWeb.h
	    Added declaration for TclWeb_GetEnvVar.

	* src/TclWebapache.c
	    Added command TclWeb_GetEnvVar.  Gets a single environment
	    variable.

	* src/mod_rivet.c
	    Added some extra stuff to the default error functions.
	    If the error_script fails, we output the failure.

	* src/rivetCore.c
	    Added Tcl 'env' command to get a single environment variable.

	* src/make.tcl
	* src/buildscripts/aardvark.tcl
	* src/buildscripts/graph.tcl
	    Cleaning up a bug with the struct package.

2002-03-10  Damon J. Courtney <damon@unreality.com>

	* src/mod_rivet.c
	    The Scripts output to the UserConf arrays now properly display
	    the scripts in their entirety.

	    Cleaned up the handling of directory configuration merging.

	    Fixed a bug where Rivet_GetRivetFile was stomping the BeforeScript.

2002-02-23  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c: Added functions: TclWeb_PrepareUpload,
	TclWeb_UploadChannel, TclWeb_UploadSave, TclWeb_UploadData,
	TclWeb_UploadSize, TclWeb_UploadType, TclWeb_UploadFilename,
	TclWeb_UploadNames.

	* src/rivetCore.c (Rivet_Upload): Offloaded functionality to
	TclWebApache.c.

2002-02-17  Damon J. Courtney <damon@unreality.com>

	* src/make.tcl
	    Added a script to look around a little more for Apache's apxs tool.
	    If we can't find it, we output an error message to the user.

	* src/buildscripts/findapxs.tcl
	    Added to repository.

2002-02-12  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c: Added some INLINE's.

	* src/mod_rivet.c (Rivet_ParseExecFile): Tweaking of parameters to
	enable the modification stated below.

	* src/rivetCore.c (Rivet_Parse): Removed 'rsc' from this
	function.

2002-02-07  David N. Welton  <davidw@dedasys.com>

	* src/TclWebapache.c (TclWebMakeURL): New command, extracted out
	of rivetCore.c.

2002-02-01  David N. Welton  <davidw@dedasys.com>

	* src/rivetCore.c: Deleted rivet_info command.
