@@ -1,3 +1,12 @@
+2002-03-12  Damon J. Courtney <damon@unreality.com>
+
+	* src/mod_rivet.c
+	* src/mod_rivet.h
+	* src/rivetParser.c
+	* src/rivetCore.c
+	* src/TclWebapache.c
+	    Cleaned up a lot of memory leaks.  Still working on finding more.
+
 2002-03-11  Damon J. Courtney <damon@unreality.com>
 
 	* src/TclWeb.h
